log/build_2024-10-12_01-49-22/my_python_node/stderr.log
  File "/home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node/listener.py", line 37
    point_list.append([data[0],data[1],data[2],data[3])
                                                      ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['

